-----------------------------------------------------
QUESO: Quantification of Uncertainty for Estimation,
Simulation, and Optimization.
-----------------------------------------------------

Version 0.46 (In Progress)

  * added additional regression tests to 'make check'
  * added rng (random number generator) class to accomodate either GSL or BOOST rng's

Version 0.45.3 (05 November 2012)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.45.3

  * bug fix: set uqGslMatrixClass private variables to NULL after deletion
  * simplified statistical post processing of Markov chains and Monte Carlo sequences
  * resolved compilation warnings related to gcc 4.7.2
  * allowed intermediated writings of MCMC samples, of MC input parameters, and of MC output qois
  * allowed optional calculation of unnormalized pdfs
  * added 'AllowAll' boolean options for the sampling classes

Version 0.45.2 (24 July 2012)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.45.2

  * added option to use svd for linear system solve
  * added calculation of matrix rank
  * added calculation of median
  * added debug option for filtered matrix output
    (if value is too small in magnitude, it is printed as zero)
  * include calculation of determinants
  * allow possibility of concatenating matrices vertically
  * added calculation of conditional Gaussian vector RVs

Version 0.45.1 (22 May 2012)
https://svn.ices.utexas.edu/repos/pecos/uq/queso/releases/0.45.1

  * updated autotools bootstrapping mechanism to use autoreconf
  * increased minimum autoconf requirement to v2.65
  * bug fixes with multi-level restart capability
  * bug fixes with uqDistArrayClass copy constructor
  * imposing bounds on Gaussian random variables, if such bounds are indeed requested
  * added gamma random variable
  * added beta random variable
  * added wigner random variable
  * added log-normal random variable
  * added DRAM option to read the initial position of the chain