@@ -46,8 +46,8 @@ rm -f $SOLDIR/*.txt
 rm -f $SOLDIR/*.m
 verify_file_exists $INFILE
 
-# Remove output directory as additoinal test to make sure QUESO
-# created necessary parent directory.
+# Remove output directory to nullify any previous results (and verify QUESO
+# creates necessary parent directory).
 
 rm -rf ./outputData
 
