@@ -7,7 +7,11 @@ AM_CPPFLAGS  = -I. \
 	-I$(top_srcdir)/src/misc/inc \
 	-I$(top_srcdir)/src/basic/inc \
 	-I$(top_srcdir)/src/stats/inc \
-	$(BOOST_CPPFLAGS) $(GSL_CFLAGS) $(GRVY_CFLAGS) $(ANN_CFLAGS)
+	$(BOOST_CPPFLAGS) $(GSL_CFLAGS) $(ANN_CFLAGS)
+
+if GRVY_ENABLED	
+  AM_CPPFLAGS += $(GRVY_CFLAGS)
+endif
 
 if TRILINOS_ENABLED
   AM_CPPFLAGS += -I$(TRILINOS_INCLUDE) $(EPETRA_INCLUDES)
